[gd_scene load_steps=6 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/font/EdgeOfTheGalaxyRegular-OVEa6.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Coin.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 72
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )

[node name="CoinCounter" type="Label" parent="."]
margin_left = 754.0
margin_top = 31.0
margin_right = 893.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
autowrap = true

[node name="Title" type="Label" parent="."]
margin_left = -3.0
margin_right = 1021.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( -582, -77 )
custom_fonts/font = SubResource( 1 )
text = "Get To The Top!"
align = 1
valign = 1
autowrap = true

[node name="StartButton" type="Button" parent="."]
margin_left = 369.0
margin_top = 399.0
margin_right = 653.0
margin_bottom = 497.0
custom_fonts/font = SubResource( 2 )
text = "Start"

[node name="TitleTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Coin" parent="." instance=ExtResource( 3 )]
position = Vector2( 936, 60 )
scale = Vector2( 7, 7 )
collision_mask = 0

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="TitleTimer" to="." method="_on_TitleTimer_timeout"]
